[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idx-quant-terminal"
version = "1.0.0"
description = "Enterprise Core Investment Intelligence Engine for IDX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.31.0",
    "yfinance>=0.2.36"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "application*", "domain*", "engines*", "intelligence*", "analytics*", "data*", "infrastructure*"]
